--- a/src/index.html
+++ b/src/index.html
@@ -6,10 +6,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css">
     <link rel="stylesheet" href="https://npmcdn.com/tachyons@4.0.0-beta.28/css/tachyons.min.css">
-    <title>simple-starter</title>
+    <title>Pomodoro</title>
   </head>
   <body>
     <div id="root"></div>
-    <div id="sound"></div>
+    <div class="dn" id="sound"></div>
   </body>
 </html>
